# minisat

./: CMakeLists.txt  Makefile  README-IPASIRUP.md  drup-trim.c  run_fuzz.sh
cmake/: MinisatUPConfig.cmake.in
minisat/: minisatup.cc  minisatup.h
minisat/core/: Solver.cc  Solver.h  SolverTypes.h
test/: fuzz.cc  test.cc
